[package]
name = "blown-fuse"
version = "0.1.0"
authors = ["Alejandro Soto <alejandro@34project.org>"]
edition = "2018"
description = "Filesystem in Userspace"

[features]
default = ["server", "mount"]
server = []
mount = ["server"]
client = []

[dependencies]
async-trait = "0.1.42"
bitflags = "1.2.1"
bytemuck = "1.5.0"
bytemuck_derive = "1.0.1"
futures-util = "0.3.12"
log = "0.4.14"
nix = "0.19.1"
num_enum = "0.5.1"
quick-error = "2.0.0"
smallvec = "1.6.1"
tokio = { version = "1.2.0", features = ["rt", "net", "macros", "sync"] }

[dev-dependencies]
clap = "2.33.3"
env_logger = "0.8.2"
tokio = { version = "1.2.0", features = ["rt-multi-thread"] }
uuid = "0.8.2"
