[package]
name = "blown-fuse"
version = "0.1.0"
authors = ["Alejandro Soto <alejandro@34project.org>"]
edition = "2021"
description = "Filesystem in Userspace"

[features]
default = ["server", "mount"]
server = []
mount = ["server"]
client = []

[dependencies]
async-trait = "0.1.52"
bitflags = "1.3.2"
bytemuck = "1.7.3"
bytemuck_derive = "1.0.1"
futures-util = "0.3.19"
log = "0.4.14"
nix = "0.23.1"
num_enum = "0.5.5"
quick-error = "2.0.1"
smallvec = "1.7.0"
tokio = { version = "1.15.0", features = ["rt", "net", "macros", "sync"] }

[dev-dependencies]
clap = "2.34.0"
env_logger = "0.9.0"
tokio = { version = "1.15.0", features = ["rt-multi-thread"] }
uuid = "0.8.2"
