[package]
name = "blown-fuse"
version = "0.2.1"
authors = ["Alejandro Soto <alejandro@34project.org>"]
edition = "2021"
description = "Async filesystem in userspace (FUSE) daemon library"
license = "LGPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/3442/blown-fuse"
keywords = ["fuse", "filesystem"]
categories = ["filesystem", "os::unix-apis"]

[dependencies]
bitflags = "1.3.2"
bytemuck = "1.7.3"
bytemuck_derive = "1.0.1"
bytes = "1.1.0"
log = "0.4.14"
nix = "0.23.1"
num_enum = "0.5.5"
quick-error = "2.0.1"
smallvec = "1.7.0"
tokio = { version = "1.15.0", features = ["rt", "net", "macros", "sync"] }

[dev-dependencies]
clap = "2.34.0"
env_logger = "0.9.0"
futures-util = "0.3.19"
tokio = { version = "1.15.0", features = ["fs", "io-util", "rt-multi-thread"] }
uuid = "0.8.2"
